--- a/web/src/components/hostdashboard/HostReservations.css
+++ b/web/src/components/hostdashboard/HostReservations.css
@@ -28,7 +28,7 @@
             border-radius: 5%;
             padding: 0.25em;
             box-shadow: inset 0 0 20px 10px #dedede;
-            font-size: 1.25em;
+            font-size: 1em;
             min-width: 6vw;
             text-align: center;
         }
@@ -46,37 +46,14 @@
         padding: 5%;
         min-height: 50%;
         max-height: 70%;
-        width: 50vw;
-        gap: 1em;
-        margin: 2em;
-        .reservation-item {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            gap: 2em;
-            font-size: 1.25em;
-            padding: 0.75em;
-            border: 1px solid black;
-            border-radius: 2em;
-            .check-box {
-                width: 1.5vw;
-            }
-            .status-display {
-                display: flex;
-                flex-direction: row;
-            }
-            .reservation-link:hover {
-                color: dodgerblue;
-                text-decoration: underline;
-                cursor: pointer;
-            }
-        }
+        min-width: 50vw;
+        gap: 1.5em;
+        margin: 1.5em;
     }
     .btn-box {
         display: grid;
         grid-template-columns: auto auto auto;
         gap: 1em;
-        margin-top: 5%;
         padding: 0.75em;
         border-radius: 2em;
         background-color: #0D9813;
@@ -94,7 +71,7 @@
         border-radius: 1em;
         min-width: 5vw;
         max-width: 7vw;
-        font-size: 1.25em;
+        font-size: 1em;
     }
     button:hover {
         cursor: pointer;
