--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -182,9 +182,8 @@
   z-index: 1;
   height: auto;
   cursor: pointer;
-  transform: translate(-50%, 0);
-  top: 15%;
-  left: 50%;
+  transform: translate(60%, 80%);
+
   max-width: 400px;
   text-align: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
