--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -11,6 +11,7 @@
   height: 3.4375rem;
   font-size: 0.6rem;
 }
+
 .bar .searchInputContainer {
   display: flex;
   flex-direction: column;
@@ -36,8 +37,7 @@
   padding-top: 0;
 }
 
-.bar .searchTitle,
-.searchTitleCenter {
+.searchTitle {
   color: #0D9813;
   font-size: 1rem;
   font-family: 'Kanit', sans-serif;
@@ -58,6 +58,7 @@
   border: none;
   height: 3.125rem;
 }
+
 .input-calendar {
   background: none;
   border: none;
@@ -65,10 +66,12 @@
   width: 92%;
   height: 3.5rem;
 }
+
 .bar>div {
   position: relative;
   transition: background 150ms ease, width 150ms ease;
 }
+
 .bar>div::before {
   position: absolute;
   content: "";
@@ -79,18 +82,22 @@
   height: 60%;
   background: rgb(88, 153, 22);
 }
+
 .bar>div:nth-of-type(1)::before {
   background: transparent;
 }
+
 .bar>div:nth-of-type(3)::before {
   background: solid;
   transform: translateY(-40%);
 }
+
 .bar>div:nth-of-type(4)::before {
   background: solid;
   height: 56%;
   transform: translateY(-43%);
 }
+
 .DatePicker__calendarContainer {
   position: absolute;
   top: calc(-20% + 0.7rem);
@@ -99,6 +106,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   border-radius: 0.5rem;
 }
+
 .searchbar-button {
   display: inline-block;
   outline: 0;
@@ -175,9 +183,9 @@
   background-color: #f8d7da;
   color: #721c24;
   border: 2px solid #f5c6cb;
-  padding: 24px 36px; /* Increase padding for bigger size */
-  border-radius: 16px; /* Increase border radius for a rounder shape */
-  font-size: 1.2rem; /* Increase font size for better readability */
+  padding: 24px 36px;
+  border-radius: 16px;
+  font-size: 1.2rem;
   position: absolute;
   z-index: 1;
   height: auto;
@@ -191,11 +199,11 @@
 
 
 .guest-dropdown {
-  display: none; 
+  display: none;
   position: absolute;
   top: calc(100% + 0.625rem);
   margin-right: -250%;
-  transform: translateX(-50%) scale(0.95); 
+  transform: translateX(-50%) scale(0.95);
   background: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   border-radius: 1.5625rem;
@@ -206,10 +214,11 @@
   box-sizing: border-box;
   cursor: auto;
 }
+
 .guest-dropdown.active {
-  display: block; 
-  opacity: 1; 
-  transform: translateX(-50%) scale(1); 
+  display: block;
+  opacity: 1;
+  transform: translateX(-50%) scale(1);
 }
 
 @keyframes dropdownFadeIn {
@@ -217,6 +226,7 @@
     opacity: 0;
     transform: translateX(-50%) scale(0.80);
   }
+
   100% {
     opacity: 1;
     transform: translateX(-50%) scale(1);
@@ -249,9 +259,11 @@
   color: #0a770f;
   text-align: left;
 }
+
 .selected {
   color: green;
 }
+
 .guestDescription {
   font-size: 0.7rem;
   color: #666;
@@ -320,14 +332,17 @@
 }
 
 .guestP.nowrap {
-  white-space: nowrap; 
+  white-space: nowrap;
 }
+
 .responsive-calendar {
   font-size: 11px !important;
 }
+
 .DatePicker__calendarArrow {
   display: none;
 }
+
 .Calendar__monthSelector.-open,
 .Calendar__yearSelector.-open {
   transform: translateY(0);
@@ -424,6 +439,7 @@
   z-index: 100;
   height: 0.1%;
 }
+
 .DatePicker__input {
   position: relative;
   background: transparent;
@@ -450,6 +466,7 @@
 .Calendar__monthYear {
   font-size: 1.8em;
 }
+
 .Calendar__yearSelectorText {
   border: none;
   font-size: 1em;
@@ -461,11 +478,13 @@
 .Calendar__monthSelectorItemText {
   font-size: 0.8em;
 }
+
 .Calendar__sectionWrapper {
   position: relative;
   min-height: 25.4em;
   overflow: hidden;
 }
+
 .Calendar__weekDays {
   display: flex;
   justify-content: space-between;
@@ -488,9 +507,9 @@
 @media (max-width: 730px) {
   .bar {
     border: 2px solid #0a770f;
-    width: 110%; 
-    max-width: 400px; 
-    transform: translateX(-0.5rem) ;
+    width: 110%;
+    max-width: 400px;
+    transform: translateX(-0.5rem);
     margin: auto;
     box-shadow: 0 0 5px hsl(0 0% 68%);
     border-radius: 0.875rem;
@@ -500,13 +519,13 @@
     align-items: flex-start;
     height: auto;
     padding: 10px;
-    box-sizing: border-box; 
+    box-sizing: border-box;
   }
 }
 
 @media (max-width: 730px) {
 
-  
+
   .button-section,
   .searchInputContainer,
   .check-in {
@@ -526,7 +545,7 @@
     width: 100%;
     margin-bottom: 0.4rem;
     height: 2.9rem;
-    text-overflow: ellipsis; 
+    text-overflow: ellipsis;
   }
 
   .searchBar {
@@ -537,14 +556,13 @@
     width: 100%;
     height: 2.5rem;
     transform: translateY(-15%);
+    text-overflow: ellipsis;
   }
+
   .searchBar::placeholder {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
-    text-overflow: ellipsis; 
+    transform: translate(26%, -0%);
   }
+
   .button-section {
     background-color: #f0f0f0;
     border-radius: 0.8rem;
@@ -553,18 +571,23 @@
     border: none;
     height: 3rem;
   }
-  .searchInputContainer{
+
+  .searchInputContainer {
     height: 2.8rem;
   }
+
   .searchTitleGuest {
-    transform: translateX(-5%);
+    transform: translateX(-0%);
+    transform: translateY(-15%);
     text-align: center;
-    text-overflow: ellipsis; 
+    text-overflow: ellipsis;
   }
+
   .guestP {
     position: absolute;
-    left: 10%;
+    /* left: 10%; */
   }
+
   .input-calendar {
     border: none;
     text-align: center;
@@ -572,15 +595,17 @@
     transform: translate(0%);
     height: 3.5rem;
   }
-/* tijdelijke oplossing het is nog niet responsive */
-.DatePicker__input {
-  border: solid transparent;
-  transform: translateX(-0%) translateY(-100%);
-  width: 60vw; 
-  max-width: 80%;
-  min-width: 20vw; 
-  box-sizing: border-box; 
-}
+
+  /* tijdelijke oplossing het is nog niet responsive */
+  .DatePicker__input {
+    border: solid transparent;
+    transform: translateX(-0%) translateY(-100%);
+    width: 60vw;
+    max-width: 80%;
+    min-width: 20vw;
+    box-sizing: border-box;
+  }
+
   .searchbar-button {
     height: 2.7rem;
     width: 100%;
@@ -588,21 +613,26 @@
     transform: translateX(0%);
     margin-top: 0.5rem;
   }
+
   .bar>div::before {
     background: transparent;
   }
+
   .DatePicker__calendarContainer {
     position: absolute;
     top: calc(-20% + -15.7rem);
     left: 48%;
     transform: translateX(-50%);
   }
+
   .DatePicker__calendarArrow {
     border-color: transparent;
   }
+
   .ClearButton {
     margin-top: 0.5rem;
   }
+
   .error-message {
     background-color: #f8d7da;
     color: #721c24;
@@ -620,11 +650,13 @@
     text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   }
+
   .search-icon {
     margin-right: 12px;
     transform: translateY(15%);
   }
 }
+
 .search-text {
   display: none;
 }
