All guestpages responsive + hostdashboard responsive

--- a/web/src/components/guestdashboard/guestdashboard.css
+++ b/web/src/components/guestdashboard/guestdashboard.css
@@ -6,7 +6,8 @@
     margin-bottom: 30px;
 }
 
-.dashboards {
+
+.dashboard {
     display: grid;
     grid-template-columns: 200px auto;
 }
@@ -75,6 +76,7 @@
     height: 100%;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     border-radius: 10px;
+    flex-wrap: wrap;
 
 }
 
