--- a/web/src/components/guestdashboard/paymentsguestdashboard.css
+++ b/web/src/components/guestdashboard/paymentsguestdashboard.css
@@ -10,7 +10,6 @@
 }
 
 .content{
-    padding: 20px;
     flex-grow: 1;
 }
 
@@ -118,4 +117,11 @@
     text-align: center;
     padding: 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 460px) {
+    .settingsContent h1{
+        width: 100%;
+        text-align: center;
+    }
 }
