--- a/web/src/components/guestdashboard/paymentsguestdashboard.css
+++ b/web/src/components/guestdashboard/paymentsguestdashboard.css
@@ -1,121 +1,55 @@
-.PaymentsGuestDashboard {
+.bookingContent {
+    margin-left: 20px;
+    margin-right: 20px;
     display: flex;
     flex-direction: column;
-    margin: auto;
-    max-width: 1200px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #FFFFFF;
-    border-radius: 8px;
-    overflow: hidden;
-}
-
-.content{
-    padding: 20px;
-    flex-grow: 1;
-}
-
-.payments-content {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-    gap: 100px;
-}
-
-.fulfilled-payments,
-.payment-methods {
-    flex: 1;
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.fulfilled-payments h2,
-.payment-methods h2 {
-    margin-bottom: 10px;
-    color: #4a4a4a;
-}
-
-.payment-method {
-    margin-bottom: 10px;
-}
-
-.payment-method h3 {
-    color: #4a4a4a;
-    font-size: 16px;
-}
-
-.add-payment-method {
-    background-color: #4CAF50;
-    color: white;
-    padding: 5px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin: 0 auto; /* Centering */
-    display: block; /* Ensure block-level element */
-}
-
-
-.payment-item img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 10px;
-}
-
-
-
-.payment-method-box {
-    background-color: #ffffff;
-    border: 1px solid #e0e0e0;
-    border-radius: 4px;
-    padding: 15px;
-    margin-bottom: 15px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.payment-method-box:last-child {
-    margin-bottom: 0;
-}
-
-.payment-method-title {
-    font-size: 16px;
-    color: #333;
-    margin-bottom: 5px;
-}
-
-.payment-method-details {
-    font-size: 14px;
-    color: #666;
-    line-height: 1.5;
-}.payment-item {
-     border-bottom: 1px solid #e0e0e0;
-     padding-bottom: 10px;
-     margin-bottom: 10px;
-     position: relative; /* Add this line */
- }
-
-.payment-item-details {
-    display: flex;
     align-items: center;
 }
 
-.add-payment-button {
-    position: absolute; /* Change to absolute positioning */
-    right: 20px; /* Adjust as needed to hug the right side */
-    top: 50%; /* Center vertically */
-    transform: translateY(-50%); /* Adjusts for exact vertical centering */
+.filterContainer {
+    text-align: center;
+}
+.filterContainer label {
+    margin-right: 10px;
+}
+
+.filterContainer select {
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.bookings-table {
+    width: 90%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    height: 100%;
+}
+
+.bookings-table th, .bookings-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+.bookings-table th {
+    background-color: #f2f2f2;
+    color: black;
+}
+
+.bookings-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.bookings-table tr:hover {
+    background-color: #ddd;
+    cursor: pointer;
+}
+
+.bookings-table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
     background-color: #4CAF50;
     color: white;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 24px;
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-    text-align: center;
-    padding: 0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
