--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -49,6 +49,7 @@
 
 .container {
   width: 90%;
+  height: 100%;
   margin: auto;
   margin-top: 30px;
   margin-bottom: 30px;
@@ -83,6 +84,7 @@
   box-shadow: 4px 4px #003366;
   transition: .3s;
 }
+
 
 .dashboardSection {
   display: flex;
