--- a/web/src/components/hostdashboard/HostReservations.css
+++ b/web/src/components/hostdashboard/HostReservations.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 10%;
+    min-height: 55rem;
     .header {
         text-align: left;
         padding-left: 2em;
@@ -20,10 +21,11 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        margin: 2em;
-        gap: 2em;
-        width: 40vw;
+        gap: 0.5em;
+        width: 100%;
+        margin-bottom: 2rem;
         align-self: center;
+        flex-wrap: wrap;
         .option {
             border-radius: 5%;
             padding: 0.25em;
@@ -45,7 +47,6 @@
         box-shadow: 0 0 20px 10px #dedede;
         padding: 5%;
         min-height: 50%;
-        max-height: 70%;
         min-width: 50vw;
         gap: 1.5em;
         margin: 1.5em;
@@ -80,7 +81,6 @@
         padding: 0.25em;
         border-radius: 1em;
         min-width: 5vw;
-        max-width: 7vw;
         font-size: 1em;
     }
     button:hover {
