--- a/web/src/components/utils/PageSwitcher.css
+++ b/web/src/components/utils/PageSwitcher.css
@@ -24,18 +24,30 @@
 .listing {
     box-shadow: none;
 }
-.listing-delete {
-    background-color: red;
+
+.listing-button-box {
+    display: flex;
+    flex-direction: column;
+    gap: 3%;
+    padding: 1em;
+}
+.listing-button {
     color: white;
-    display: inline-block;
     padding: 0.35em 1.2em;
     border: none;
     margin-right: 0;
     border-radius: 2em;
-    box-sizing: border-box;
     transition: all 0.2s;
-    max-width: 6em;
     max-height: 2em;
+}
+.listing-delete {
+    background-color: red;
+}
+.listing-draft {
+    background-color: #0D9813;
+}
+.listing-live {
+    background-color: #003366;
 }
 .listing-delete:hover {
     background-color: darkred;
@@ -122,7 +134,7 @@
             max-height: none;
             height: auto;
         }
-        .listing-delete {
+        .listing-button {
             margin: 1em;
         }
     }
