--- a/web/src/components/chat/chat.css
+++ b/web/src/components/chat/chat.css
@@ -164,7 +164,9 @@ p{
 
 .chat__users{
     width: 100%;
-    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 100%;
     background: white;
     display: flex;
     justify-content: flex-start;
