Fixes to tests so that they wont fail anymore

--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -1,8 +1,9 @@
 .bar {
   width: 45rem;
   margin: auto;
-  box-shadow: 0 0 5px hsl(0 0% 68%);
+  box-shadow: 0 0 5px hsl(0 0% 78%);
   border-radius: 1.875rem;
+  border: solid 1px #7171716a;
   display: flex;
   height: 3.4375rem;
   box-sizing: border-box;
@@ -78,6 +79,7 @@
 .bar>div:nth-of-type(3)::before {
   background: solid;
   transform: translateY(-40%);
+  left: -0.01%;
 }
 
 .bar>div:nth-of-type(4)::before {
@@ -109,7 +111,7 @@
   box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
   height: 2.5rem;
   width: 2.5rem;
-  margin-top: 0.5rem;
+  margin-top: 0.45rem;
   margin-left: 0.5rem;
 }
 
