--- a/web/src/components/chatbot/chatbot.css
+++ b/web/src/components/chatbot/chatbot.css
@@ -4,7 +4,6 @@
   width: 90%;
   max-width: 600px;
   height: 80vh;
-  margin: auto;
   border: 1px solid #ccc;
   border-radius: 10px;
   padding: 0;
@@ -12,10 +11,17 @@
   background-color: #ffffff;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+}
+
+.chat-center {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
 
 .chat-messages {
