--- a/web/src/components/landingpage/onboardingHost.css
+++ b/web/src/components/landingpage/onboardingHost.css
@@ -19,7 +19,7 @@
   height: 300px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  
+
   margin-bottom: 15px;
   position: relative;
   
@@ -280,6 +280,35 @@
   width: 4.5vw;
   height: auto;
   margin-bottom: 5%;
+}
+
+.image-upload {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 6em 0;
+  border-radius: 2em;
+  border: 1px solid #003366;
+  text-align: center;
+  margin: 0 20%;
+  .file-input-thumbnail {
+    align-self: center;
+  }
+}
+
+.accommodation-thumbnail {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+}
+
+.accommodation-images {
+  padding: 5%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 5%;
+  justify-items: center;
+  align-items: center;
 }
 @media (max-width: 480px) {
   .accommodation-types {
