--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -54,6 +54,7 @@
 .personalMenuDropdown {
     position: relative;
     display: inline-block;
+    z-index: 2;
 }
 
 .personalMenuDropdownContent {
