Web: homepage responsiveness adjusted

--- a/web/src/components/home/Accommodations.css
+++ b/web/src/components/home/Accommodations.css
@@ -98,6 +98,15 @@
   .accocard {
     width: 48%;
   }
+
+  .accocard-specs {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
 }
 
 @media (max-width: 480px) {
@@ -107,4 +116,13 @@
   .accocard-size {
     font-size: 12px;
   }
+
+  .accocard-specs {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
 }
