--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -5,9 +5,8 @@
   border-radius: 1.875rem;
   border: solid 1px #7171716a;
   display: flex;
-  height: 3.4375rem;
+  height: 3.43rem;
   box-sizing: border-box;
-  font-size: 0.6rem;
 }
 
 .bar .searchInputContainer {
@@ -34,6 +33,8 @@
   font-size: 1rem;
   font-family: 'Kanit', sans-serif;
   font-weight: 500;
+  text-overflow: ellipsis;
+
 }
 .check-in {
   width: 17%;
@@ -42,11 +43,7 @@
 .location {
   width: 34%;
 }
-.accommodation {
-  width: 25%;
-  border: none;
-  height: 3.125rem;
-}
+
 
 .input-calendar {
   background: none;
@@ -67,7 +64,7 @@
   left: -1.85%;
   top: 50%;
   transform: translateY(-50%);
-  width: 0.05625rem;
+  width: 0.05rem;
   height: 60%;
   background: rgb(88, 153, 22);
 }
@@ -77,7 +74,6 @@
 }
 
 .bar>div:nth-of-type(3)::before {
-  background: solid;
   transform: translateY(-40%);
   left: -0.01%;
 }
@@ -332,12 +328,12 @@
   transform: translateY(0);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 730px) {
   .guest-dropdown {
     width: calc(120% - 1.875rem);
     left: 50%;
     right: 50%;
-    transform: none;
+    top: -270%;
   }
 }
 
@@ -436,6 +432,8 @@
 
 .Calendar__monthYear {
   font-size: 1.8em;
+  text-decoration: underline;
+  
 }
 
 .Calendar__yearSelectorText {
@@ -456,19 +454,9 @@
   overflow: hidden;
 }
 
-.Calendar__weekDays {
-  display: flex;
-  justify-content: space-between;
-  color: var(--cl-color-disabled);
-  font-size: 1.2em;
-  margin-bottom: -0.5em;
-  padding: 0 2.6em;
-  position: relative;
-}
 .Calendar__day.-weekend:not(.-selected):not(.-blank):not(.-selectedStart):not(.-selectedEnd):not(.-selectedBetween) {
-  color: inherit; /* of color: #fff; */
+  color: inherit;
 }
-
 
 @media (max-width: 730px) {
 
@@ -518,7 +506,7 @@
     border-radius: 0.8rem;
     width: 100%;
     margin-bottom: 0.4rem;
-    height: 2.9rem;
+    height: 3rem;
     text-overflow: ellipsis;
   }
 
@@ -527,9 +515,9 @@
     background: none;
     border: none;
     text-align: center;
-    width: 100%;
-    height: 3rem;
-    transform: translateY(-15%);
+    width: 95%;
+    height: 2.5rem;
+    transform: translateY(-0%);
     text-overflow: ellipsis;
     margin: auto;
   }
@@ -628,5 +616,36 @@
 @media (max-width: 730px) {
   .search-text {
     display: inline;
+  }
+}
+@media (max-width: 730px) {
+  .mobile-search-button {
+    display: block;
+    width: 100%;
+    max-width: 300px;
+    padding: 0.8rem; /* Aangepaste padding voor betere aanraakbaarheid */
+    background-color: #ffffff;
+    border: 1px solid #e2e2e4;
+    border-radius: 1.8rem; /* Afgeronde hoeken */
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    font-size: 1rem;
+    color: #484848;
+    outline: none;
+    text-align: left;
+    font-weight: 400;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: transform 0.3s ease-in-out;
+    margin-bottom: 0.5rem ;
+    text-overflow: ellipsis;
+  }
+  
+
+  .bar {
+    display: none;
+  }
+
+  .bar-container .bar {
+    display: block;
   }
 }
